--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="text"><b>Local Explorer</b></h1>
             <br />
             <div class="center">
-                <a href="home.html"><img src="images/circle.png" alt="A white cirlce"></a>
+                <a href="home.html"><img class="center" src="images/circle.png" alt="A white cirlce"></a>
             </div>
             <br />
             <h4 class="text">Click on the circle to explore the world like a local!</h4>
