--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,7 +19,7 @@
         </address>
         
         
-        <script src="jquery3.2.1.js"></script>
-        <script src="bootstrap3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/jquery3.2.1.js"></script>
+        <script src="js/bootstrap.js"></script>
     </body>
 </html>
