--- a/countries/spain.html
+++ b/countries/spain.html
@@ -4,11 +4,11 @@
         <title lang="en"></title>
         <meta charset="UTF-8">
         <meta name="vewport" content="width=device-width, inital-scale=1">
-        <link rel="stylesheet" href="bootstrap3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     
     <body>
-        <script src="jquery3.2.1.js"></script>
-        <script src="bootstrap3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/jquery3.2.1.js"></script>
+        <script src="js/bootstrap.js"></script>
     </body>
 </html>
