--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#CountyCarousel" data-slide="next">
+            <a class="right carousel-control" href="#CountryCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
                 <span class="sr-only">Next</span>
             </a>
