--- a/home.html
+++ b/home.html
@@ -27,11 +27,11 @@
             
             <!--Carousel Content -->
             <div class="carousel-inner">
-                <div class="item active"><img src="images/egypt.jpg" alt="Egypt"></div>
-                <div class="item"><img src="images/china.jpg" alt="China"></div>
-                <div class="item"><img src="images/india.jpg" alt="India"></div>
-                <div class="item"><img src="images/spain.jpg" alt="Spain"></div>
-                <div class="item"><img src="images/england.jpg" alt="England"></div>
+                <div class="item active"><img src="images/egypt.jpg" alt="Egypt"><div class="carousel-caption"><a href="countries/egypt.html"><h1>EGYPT</h1></a></div></div>
+                <div class="item"><img src="images/china.jpg" alt="China"><div class="carousel-caption"><a href="countries/china.html"><h1>CHINA</h1></a></div></div>
+                <div class="item"><img src="images/india.jpg" alt="India"><div class="carousel-caption"><a href="countries/india.html"><h1>INDIA</h1></a></div></div>
+                <div class="item"><img src="images/spain.jpg" alt="Spain"><div class="carousel-caption"><a href="countries/spin.html"><h1>SPAIN</h1></a></div></div>
+                <div class="item"><img src="images/england.jpg" alt="England"><div class="carousel-caption"><a href="countries/unitedKingdom.html"><h1>ENGLAND</h1></a></div></div>
             </div>
             
             <!--Left/Right controls-->
