--- a/countries/china.html
+++ b/countries/china.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title lang="en"></title>
+        <link rel="icon" href="../images/actuallogo.png">
         <meta charset="UTF-8">
         <meta name="vewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="../css/bootstrap.css">
@@ -40,6 +41,42 @@
             <hr />
         </div>
         
+        </div class="Article">
+            <ol>
+                <li>
+                    <p><h3>China Recognizes Only One Currency – Its Own</h3>Don't expect sellers to accept any other currency - cause they wont.   So always keep a stash of Renminbis ¥ nearby.br/></p>
+                </li>
+                <li>
+                    <p><h3>Don’t Tip In China</h3>Unlike other countries where tipping is regarded as a gentle act (or requirement) in China it’s not acceptable to tip. Saved a few bucks there!<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Learn Chinese</h3> Most Chinese speak Chinese exclusively. So Make Sure To Have A Good Translating Application. And learn some basic chinese to get you through the day<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Use Your Haggling Skills</h3>Don’t Settle For the first price. Change your mindset and save even more of those precious Renminbis ¥.<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Facebook? Google?  Instagram?  Not In China.</h3>China’s internet is censored. So if you want to access a lot of the websites you would use at home, remember that you can also use a VPN to access things (such as american tv shows) that are blocked in other countries. Or just go into a social media cleanse for a while - we could all use it.<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>When Having A Soup, Make A Slurping Sound</h3>As bizarre as it sounds slurping your soup is a sign of request and a compliment to your soup. So leave those manners behind!<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Don't Stick Your Chopsticks Upright In Your Rice</h3>It's considered extremely rude because it's associated with funerals. Usually, people leave rice with chopsticks in them at the tombstones of their loved ones in order to "feed them" in the afterlife.<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Don't Be Fooled By Loud Voices</h3>Chinese people like to converse very loudly and passionately at times, and it can be easy to mistake this for an argument.<br/><br/></p>
+                </li>
+                <li>
+                    <p><h3>Bring Toilet Paper</h3>Toilets are mainly squatting toilets so you’d probably need your toilet papers and a sanitizer would help.<br/><br/></p>
+                </li>
+                 <li>
+                    <p><h3>Spitting In China Is A Normal Thing So Don’t Stare</h3>The Chinese do not use handkerchiefs and tissues to clear their noses, and instead spit. While this can be a bit confronting when you first visit china, they’re similarly affronted when they see us blowing our noses.<br/><br/></p>
+                </li>
+
+
+            </ol>
+        </div>
                   
 
         <script src="js/jquery3.2.1.js"></script>
