--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title lang="en">Local Explorer</title>
+        <link rel="icon" href="images/actuallogo.png">
         <meta charset="UTF-8">
         <meta name="vewport" content="width=device-width, inital-scale=1"> <!--Ensuring 1:1 ratio with device-->
         <link rel="stylesheet" href="css/bootstrap.min.css"> <!--Linking to bootstrap css stylesheet-->
