--- a/references.html
+++ b/references.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title lang="en"></title>
+        <link rel="icon" href="images/actuallogo.png">
         <meta charset="UTF-8">
         <meta name="vewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css">
